--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             z-index: 10;
         }
 
-        /* Bande LED agrandie sur chaque côté */
+        /* Bande LED rétrécie sur chaque côté */
         .led-strip.top, .led-strip.bottom {
-            height: 20px;  /* Bande LED plus large */
+            height: 10px;  /* Bande LED réduite */
             width: 100%;
         }
 
         .led-strip.left, .led-strip.right {
-            width: 20px;  /* Bande LED plus large */
+            width: 10px;  /* Bande LED réduite */
             height: 100%;
         }
 
@@ -333,7 +333,7 @@
 
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
-        <h1>Bienvenue sur mon blog</h1>
+        <h1>Bienvenue sur mon site</h1>
 
         <!-- Affichage du nombre de personnes qui se sont connectées -->
         <div style="display: flex; align-items: center; margin-top: 10px;">
@@ -433,4 +433,3 @@
 
 </body>
 </html>
-
