--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
     <header>
         <img src="OIP.jpg" alt="Photo de profil" class="profile-pic">
-        <h1>Bienvenue sur mon blog</h1>
+        <h1>BIENVENUE SUR LE SITE STARKOT48</h1>
 
         <!-- Affichage du nombre de personnes qui se sont connectées -->
         <div style="display: flex; align-items: center; margin-top: 10px;">
