--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
       color: #fff;
     }
 
+    /* Barre de chargement Instagram/Cloudflare */
+    #loading-bar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 4px;
+      width: 0;
+      background: linear-gradient(90deg, #00acee, #0077b6);
+      z-index: 9999;
+      transition: width 0.3s ease;
+      animation: loading 3s linear forwards;
+    }
+
+    @keyframes loading {
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      z-index: 9998;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 400;
+      transition: opacity 0.5s ease;
+    }
+
     header {
       padding: 40px 20px;
       text-align: center;
@@ -201,10 +237,16 @@
 </head>
 <body>
 
+  <!-- Barre de chargement Instagram/Cloudflare -->
+  <div id="loading-screen">
+    <div id="loading-bar"></div>
+    <p>Vérification de sécurité...</p>
+  </div>
+
   <header>
     <img src="OIP.jpg" alt="Photo de profil" class="profile-pic" />
     <h1>Starkot48</h1>
-    <p class="bio">Développeur passionné • Linux-scratcher • Raspberry Pi 0w• Web • Social team</p>
+    <p class="bio">Développeur passionné • Linux-scratcher • Raspberry Pi 0w • Web • Social team</p>
     <div class="stats">
       <span><strong id="visitCount">0</strong> visites</span>
       <span><strong id="likeCount">0</strong> likes</span>
@@ -287,6 +329,17 @@
         document.getElementById('newComment').value = '';
       }
     }
+
+    // Barre de chargement façon Instagram/Cloudflare
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        const loader = document.getElementById('loading-screen');
+        loader.style.opacity = '0';
+        setTimeout(() => {
+          loader.style.display = 'none';
+        }, 500);
+      }, 3000);
+    });
   </script>
 </body>
 </html>
