--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
       color: #fff;
     }
 
-    /* Barre de chargement LED style Instagram/Cloudflare */
+    /* Barre de chargement LED multicolore */
     #loading-bar {
       position: fixed;
       top: 0;
       left: 0;
       height: 4px;
       width: 100%;
-      background: linear-gradient(90deg, rgba(0,172,238,0) 0%, rgba(0,172,238,0.8) 50%, rgba(0,172,238,0) 100%);
-      background-size: 200% auto;
-      animation: led-move 1.5s linear infinite;
+      background: linear-gradient(90deg, 
+        rgba(255, 0, 0, 0.8), 
+        rgba(255, 165, 0, 0.8), 
+        rgba(255, 255, 0, 0.8), 
+        rgba(0, 255, 0, 0.8), 
+        rgba(0, 0, 255, 0.8), 
+        rgba(75, 0, 130, 0.8), 
+        rgba(238, 130, 238, 0.8));
+      background-size: 400% auto;
+      animation: led-move 3s linear infinite;
       z-index: 9999;
     }
 
