--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   <!-- Écran de chargement LED -->
   <div id="loading-screen">
     <div id="loading-bar"></div>
-    <p>Vérification de sécurité...</p>
+    <p>Vérification pour vois si t'es un bon</p>
   </div>
 
   <header>
