--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <header>
     <img src="OIP.jpg" alt="Photo de profil" class="profile-pic" />
     <h1>Starkot48</h1>
-    <p class="bio">Développeur passionné • Linux-scratcher • Raspberry Pi 0w • Web • Social team</p>
+    <p class="bio">Développeur passionné • Linux-scratcher • Raspberry Pi 0w • Web • Social team • Insta : LMTs.48</p>
     <div class="stats">
       <span><strong id="visitCount">0</strong> visites</span>
       <span><strong id="likeCount">0</strong> likes</span>
