--- a/index.html
+++ b/index.html
@@ -249,6 +249,14 @@
       text-decoration: none;
       font-size: 14px;
       transition: background-color 0.3s, color 0.3s;
+      display: flex;
+      align-items: center;
+    }
+
+    .partner-button img {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
     }
 
     .partner-button:hover {
@@ -323,10 +331,22 @@
     <div class="chat-container">
       <h2>🤝 En partenariat avec :</h2>
       <div class="partner-buttons">
-        <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">Linux-Scratcher</a>
-        <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">Loutre Aquatique</a>
-        <a href="https://test.linux-scratcher.fr/" target="_blank" class="partner-button">Néant85</a>
-        <a href="https://socialteams.linux-scratcher.fr/" target="_blank" class="partner-button">Social Team</a>
+        <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Tux.png" alt="Linux-Scratcher">
+          Linux-Scratcher
+        </a>
+        <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">
+          <img src="https://i.imgur.com/W3a2TLl.png" alt="Loutre Aquatique">
+          Loutre Aquatique
+        </a>
+        <a href="https://test.linux-scratcher.fr/" target="_blank" class="partner-button">
+          <img src="https://i.imgur.com/4Y7kZzN.png" alt="Néant85">
+          Néant85
+        </a>
+        <a href="https://socialteams.linux-scratcher.fr/" target="_blank" class="partner-button">
+          <img src="https://i.imgur.com/Zy0P82L.png" alt="Social Team">
+          Social Team
+        </a>
       </div>
     </div>
   </main>
