--- a/index.html
+++ b/index.html
@@ -317,7 +317,6 @@
       </div>
     </div>
 
-    <!-- Public chat -->
     <div class="chat-container">
       <h2>💬 Chat public</h2>
       <div class="messages" id="messages"></div>
@@ -327,7 +326,6 @@
       </div>
     </div>
 
-    <!-- Partnership Section -->
     <div class="chat-container">
       <h2>🤝 En partenariat avec :</h2>
       <div class="partner-buttons">
@@ -337,15 +335,15 @@
         </a>
         <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">
           <img src="https://i.imgur.com/W3a2TLl.png" alt="Loutre Aquatique">
-          Loutre Aquatique
+          🦦 Loutre Aquatique
         </a>
         <a href="https://test.linux-scratcher.fr/" target="_blank" class="partner-button">
           <img src="https://i.imgur.com/4Y7kZzN.png" alt="Néant85">
-          Néant85
+          🎮 Néant85
         </a>
         <a href="https://socialteams.linux-scratcher.fr/" target="_blank" class="partner-button">
           <img src="https://i.imgur.com/Zy0P82L.png" alt="Social Team">
-          Social Team
+          🪢 Social Team
         </a>
       </div>
     </div>
