--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
     }
 
     .partner-button {
-      background-color: #222;
-      color: #00acee;
-      border: 1px solid #00acee;
+      background-color: #444;
+      color: #ddd;
+      border: 1px solid #666;
       padding: 10px 20px;
       border-radius: 6px;
       text-decoration: none;
@@ -254,8 +254,8 @@
     }
 
     .partner-button:hover {
-      background-color: #00acee;
-      color: #000;
+      background-color: #666;
+      color: #fff;
     }
 
     footer {
@@ -324,7 +324,7 @@
       <h2>🤝 En partenariat avec :</h2>
       <div class="partner-buttons">
         <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">
-          Linux-Scratcher
+          🐧 Linux-Scratcher
         </a>
         <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">
           🦦 Loutre Aquatique
