--- a/index.html
+++ b/index.html
@@ -323,17 +323,28 @@
     <div class="chat-container">
       <h2>🤝 En partenariat avec :</h2>
       <div class="partner-buttons">
-        <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">
-          🐧 Linux-Scratcher
-        </a>
-        <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">
-          🦦 Loutre Aquatique
-        </a>
-        <a href="https://test.linux-scratcher.fr/" target="_blank" class="partner-button">
-          🎮 Néant85
-        </a>
-        <a href="https://socialteams.linux-scratcher.fr/" target="_blank" class="partner-button">
-          🪢 Social Team
+        <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">🐧 Linux-Scratcher</a>
+        <a href="https://guns.lol/loutre_aquatique" target="_blank" class="partner-button">🦦 Loutre Aquatique</a>
+        <a href="https://test.linux-scratcher.fr/" target="_blank" class="partner-button">🎮 Néant85</a>
+        <a href="https://socialteams.linux-scratcher.fr/" target="_blank" class="partner-button">🪢 Social Team</a>
+      </div>
+    </div>
+
+    <div class="chat-container">
+      <h2>🌐 Notre réseaux social principal :</h2>
+      <div style="display: flex; justify-content: center; margin-top: 20px;">
+        <a href="https://nyapi.fr/" target="_blank" style="
+          background-color: #555;
+          color: white;
+          padding: 20px 40px;
+          font-size: 24px;
+          border-radius: 12px;
+          text-decoration: none;
+          font-weight: bold;
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+          transition: background-color 0.3s, transform 0.2s;
+        " onmouseover="this.style.backgroundColor='#777'; this.style.transform='scale(1.05)'" onmouseout="this.style.backgroundColor='#555'; this.style.transform='scale(1)'">
+          🐾 Nyapi
         </a>
       </div>
     </div>
