--- a/index.html
+++ b/index.html
@@ -321,6 +321,25 @@
     </div>
 
     <div class="chat-container">
+      <h2 style="font-size: 28px; margin-bottom: 20px;">Bientôt🙂</h2>
+      <div style="display: flex; justify-content: center;">
+        <a href="#" style="
+          background-color: #444;
+          color: #eee;
+          padding: 25px 60px;
+          font-size: 28px;
+          border-radius: 12px;
+          text-decoration: none;
+          font-weight: bold;
+          box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+          transition: background-color 0.3s, transform 0.2s;
+        " onmouseover="this.style.backgroundColor='#666'; this.style.transform='scale(1.05)'" onmouseout="this.style.backgroundColor='#444'; this.style.transform='scale(1)'">
+          🌀 Pynia
+        </a>
+      </div>
+    </div>
+
+    <div class="chat-container">
       <h2>🤝 En partenariat avec :</h2>
       <div class="partner-buttons">
         <a href="https://linux-scratcher.fr/" target="_blank" class="partner-button">🐧 Linux-Scratcher</a>
@@ -392,3 +411,4 @@
   </script>
 </body>
 </html>
+
